--- a/fopasg/src/main/resources/com/mycompany/frontend/error-message.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/error-message.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="497.0" style="-fx-background-color: #FF9696; -fx-background-radius: 8px;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.ErrorMessageController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="497.0" style="-fx-background-color: #FF9696; -fx-background-radius: 8px;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.helper.MessageController">
    <children>
       <Text fx:id="messageText" fill="WHITE" layoutX="60.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="376.58587646484375">
          <font>
