--- a/fopasg/src/main/resources/com/mycompany/frontend/pop-up-box.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/pop-up-box.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="175.0" prefWidth="400.0" style="-fx-border-color: #6A669D; -fx-border-radius: 10px; -fx-border-width: 3px;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.PopUpBoxController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="175.0" prefWidth="400.0" style="-fx-border-color: #6A669D; -fx-border-radius: 10px; -fx-border-width: 3px;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.helper.PopUpBoxController">
    <children>
       <Text fx:id="confirmationText" fill="#444444" layoutX="23.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="334.7418518066406">
          <font>
