--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -16,7 +17,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
-<?import javafx.collections.FXCollections?>
 
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="472.0" minWidth="700.0" prefHeight="490.0" prefWidth="720.0" style="-fx-background-color: # #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.DiaryEntryPageController">
    <children>
@@ -67,23 +67,13 @@
                                                                                                       </Text> -->
             
                                                                                                       <!-- Add styleClass="error" to have the red border effect -->
-                        <TextArea id="padding-top" fx:id="contents" depthTest="DISABLE" maxHeight="300.0" minHeight="205.0" prefHeight="300.0" prefWidth="636.0" promptText="Click here to write your content">
+                        <TextArea id="padding-top" fx:id="contents" depthTest="DISABLE" prefHeight="217.0" prefWidth="627.0" promptText="Click here to write your content">
                            <font>
                               <Font name="Roboto" size="12.0" />
                            </font>
                         </TextArea>
-                        <FlowPane hgap="5.0">
+                        <FlowPane fx:id="images" hgap="5.0">
                            <children>
-                              <ImageView fitHeight="54.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@images/test-img.jpg" />
-                                 </image>
-                              </ImageView>
-                              <ImageView fitHeight="54.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@images/test-img.jpg" />
-                                 </image>
-                              </ImageView>
                            </children>
                         </FlowPane>
                      </children>
@@ -255,14 +245,14 @@
                      </cursor>
                      <items>
                         <FXCollections fx:factory="observableArrayList">
-                           <Label fx:id="8" text="8"/>
-                           <Label fx:id="9" text="10"/>
-                           <Label fx:id="10" text="12"/>
-                           <Label fx:id="11" text="14"/>
-                           <Label fx:id="12" text="16"/>
-                           <Label fx:id="13" text="18"/>
-                           <Label fx:id="14" text="20"/>
-                           <Label fx:id="15" text="22"/>
+                           <Label fx:id="8" text="8" />
+                           <Label fx:id="9" text="10" />
+                           <Label fx:id="10" text="12" />
+                           <Label fx:id="11" text="14" />
+                           <Label fx:id="12" text="16" />
+                           <Label fx:id="13" text="18" />
+                           <Label fx:id="14" text="20" />
+                           <Label fx:id="15" text="22" />
                         </FXCollections>
                      </items>
                   </ComboBox>
