--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
@@ -4,11 +4,15 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="720.0" prefHeight="500.0" prefWidth="720.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.DiaryViewController">
@@ -46,11 +50,26 @@
                   <Insets left="20.0" />
                </padding>
             </TextField>
-            <TextArea fx:id="contents" depthTest="DISABLE" editable="false" layoutX="37.0" layoutY="197.0" prefHeight="217.0" prefWidth="627.0" promptText="Click here to write your content" text="Some contents here">
-               <font>
-                  <Font name="Roboto" size="12.0" />
-               </font>
-            </TextArea>
+            <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="37.0" layoutY="190.0" prefHeight="237.0" prefWidth="630.0">
+               <content>
+                  <VBox>
+                     <children>
+                        <TextArea fx:id="contents" depthTest="DISABLE" editable="false" prefHeight="217.0" prefWidth="627.0" promptText="Click here to write your content" text="Some contents here">
+                           <font>
+                              <Font name="Roboto" size="12.0" />
+                           </font>
+                        </TextArea>
+                        <FlowPane fx:id="images" hgap="5.0">
+                           <children>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </FlowPane>
+                     </children>
+                  </VBox>
+               </content>
+            </ScrollPane>
             <FlowPane hgap="5.0" layoutX="51.0" layoutY="428.0" prefHeight="23.0" prefWidth="212.0">
                <children>
                   <TextField fx:id="wordCount" alignment="CENTER_RIGHT" disable="true" prefHeight="19.0" prefWidth="33.0" promptText="0" style="-fx-background-color: #ffffff;">
