--- a/fopasg/src/main/resources/com/mycompany/frontend/css/style.css
+++ b/fopasg/src/main/resources/com/mycompany/frontend/css/style.css
@@ -6,8 +6,12 @@
     -fx-border-width: 0;               
     -fx-focus-color: transparent;     
     -fx-faint-focus-color: transparent; 
-    -fx-background-insets: 0;   
-    -fx-padding: 70px 20px 20px 20px;          
+    -fx-background-insets: 0; 
+    -fx-padding: 20px 20px 20px 20px;           
+}
+
+#pt .rich-text-area {
+    -fx-padding: 70px 20px 20px 20px;   
 }
 
 .rich-text-area .paragraph-list-view {
