--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
@@ -66,7 +66,7 @@
                                                                                                       </Text> -->
             
                                                                                                       <!-- Add styleClass="error" to have the red border effect -->
-                        <Pane fx:id="textarea" prefHeight="300.0" prefWidth="638.0">
+                        <Pane id="pt" fx:id="textarea" prefHeight="300.0" prefWidth="638.0">
                            
                         </Pane>
                         <FlowPane fx:id="images" hgap="5.0">
@@ -115,72 +115,75 @@
             <!-- Below is the error message. Uncomment it to use. -->
             <!-- <Text fill="#ff9696" layoutX="34.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title cannot be empty." wrappingWidth="101.376953125">
                <font>
-                                                                                                <Font name="Roboto Black" size="10.0" />
-                                                                                             </font>
-                                                                                          </Text> -->
+                                                                                                                                                      <Font name="Roboto Black" size="10.0" />
+                                                                                                                                                   </font>
+                                                                                                                                                </Text> -->
             
-            <Pane layoutX="120.0" layoutY="201.0" prefHeight="40.0" prefWidth="502.0" style="-fx-background-color: #F1F1F1; -fx-background-radius: 5px;">
+                                                                  <Pane layoutX="68.0" layoutY="201.0" prefHeight="40.0" prefWidth="565.0" style="-fx-background-color: #F1F1F1; -fx-background-radius: 5px;">
                <children>
-                  <Button fx:id="textBold" alignment="CENTER" contentDisplay="CENTER" layoutX="29.0" layoutY="2.5" mnemonicParsing="false" prefHeight="33.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="textItalic" alignment="CENTER" contentDisplay="CENTER" layoutX="58.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button>
-                   <ComboBox fx:id="fontSizeComboBox" layoutX="100.0" layoutY="7.0" prefHeight="25.0" prefWidth="20.0" style="-fx-background-color: #f1f1f1;">
+                  <ComboBox fx:id="fontFamilyComboBox" layoutX="20.0" layoutY="7.0" prefHeight="25.0" prefWidth="99.0" style="-fx-background-color: #f1f1f1;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ComboBox>
-                  <Button fx:id="textUnderline" alignment="CENTER" layoutX="148.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button fx:id="textBold" alignment="CENTER" contentDisplay="CENTER" layoutX="120.0" layoutY="2.5" mnemonicParsing="false" prefHeight="33.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="textStrikethrough" alignment="CENTER" layoutX="180.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button fx:id="textItalic" alignment="CENTER" contentDisplay="CENTER" layoutX="155.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <ColorPicker fx:id="textForeground" layoutX="220.0" layoutY="3.0" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;">
+                  <ComboBox fx:id="fontSizeComboBox" layoutX="200.0" layoutY="7.0" prefHeight="25.0" prefWidth="59.0" style="-fx-background-color: #f1f1f1;">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ComboBox>
+                  <Button fx:id="textUnderline" alignment="CENTER" layoutX="260.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="textStrikethrough" alignment="CENTER" layoutX="300.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <ColorPicker fx:id="textForeground" layoutX="340.0" layoutY="3.0" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ColorPicker>
                   <!-- <Button alignment="CENTER" contentDisplay="CENTER" layoutX="256.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
-                        <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/highlight-colour-icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button> -->
-                  <ColorPicker fx:id="textBackground" layoutX="256.0" layoutY="3.0" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;">
+                                                                              <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
+                                                                                 <image>
+                                                                                    <Image url="@images/highlight-colour-icon.png" />
+                                                                                 </image>
+                                                                              </ImageView>
+                                                                           </graphic>
+                                                                           <cursor>
+                                                                              <Cursor fx:constant="HAND" />
+                                                                           </cursor>
+                                                                        </Button> -->
+                  <ColorPicker fx:id="textBackground" layoutX="380.0" layoutY="3.0" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ColorPicker>
-                  <Line endX="12.0" layoutX="303.0" layoutY="20.0" rotate="90.0" startX="-10.0" stroke="#8f8f8f" strokeWidth="0.5" />
-                  <Button fx:id="bulletList" alignment="CENTER" layoutX="315.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button fx:id="bulletList" alignment="CENTER" layoutX="430.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="numberList" alignment="CENTER" layoutX="351.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button fx:id="numberList" alignment="CENTER" layoutX="470.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Line endX="12.0" layoutX="395.0" layoutY="20.0" rotate="90.0" startX="-10.0" stroke="#8f8f8f" strokeWidth="0.5" />
-                  <Button fx:id="uploadImageBtn" alignment="CENTER" layoutX="410.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button fx:id="uploadImageBtn" alignment="CENTER" layoutX="515.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -192,6 +195,8 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
+                  <Line endX="12.0" layoutX="430.0" layoutY="20.0" rotate="90.0" startX="-10.0" stroke="#8f8f8f" strokeWidth="0.5" />
+                  <Line endX="12.0" layoutX="515.0" layoutY="20.0" rotate="90.0" startX="-10.0" stroke="#8f8f8f" strokeWidth="0.5" />
                </children>
             </Pane>
          </children>
