--- a/fopasg/src/main/resources/com/mycompany/frontend/profile-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/profile-page.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="500.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.ProfilePageController">
    <children>
@@ -88,6 +88,11 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
+            <Text fx:id="passwordMsg" layoutX="139.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;">
+               <font>
+                  <Font name="Roboto Bold" size="10.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
    </children>
