--- a/fopasg/src/main/resources/com/mycompany/frontend/css/style.css
+++ b/fopasg/src/main/resources/com/mycompany/frontend/css/style.css
@@ -46,6 +46,11 @@
     -fx-border-width: 2px;          
 }
 
+.errorMsg {
+    -fx-fill: #FF9696;
+    -fx-text-fill: #FF9696;
+}
+
 
 /* Initially hide the hoverPane */
 #hoverPane {
