--- a/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
@@ -1,31 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="com.mycompany.frontend.LoginPageController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.LoginPageController">
    <children>
-      <Pane layoutX="60.0" layoutY="60.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: E5E3D4; -fx-background-radius: 22;">
+      <Pane layoutX="62.0" layoutY="58.0" prefHeight="483.0" prefWidth="774.0" style="-fx-background-color: E5E3D4; -fx-background-radius: 22;">
          <children>
-            <Label layoutX="186.0" layoutY="50.0" style="-fx-alignment: Inria Sans;" text="THE DIARY">
+            <Label layoutX="281.0" layoutY="72.0" text="THE DIARY">
                <font>
                   <Font name="Calibri Bold" size="48.0" />
                </font>
             </Label>
-            <PasswordField alignment="TOP_CENTER" layoutX="92.0" layoutY="244.0" prefHeight="25.0" prefWidth="416.0" promptText="password" style="-fx-background-color: #6ABC6A; -fx-background-radius: 50;">
+            <PasswordField fx:id="password" alignment="TOP_CENTER" layoutX="87.0" layoutY="273.0" prefHeight="25.0" prefWidth="600.0" promptText="Password" style="-fx-background-color: #6ABC6A; -fx-background-radius: 50;">
+               <effect>
+                  <ColorAdjust contrast="-0.02" />
+               </effect>
                <font>
-                  <Font name="Candara Light" size="10.0" />
+                  <Font name="System Bold" size="12.0" />
                </font>
+               <padding>
+                  <Insets bottom="10.0" top="10.0" />
+               </padding>
             </PasswordField>
-            <TextField accessibleRole="CONTEXT_MENU" alignment="TOP_CENTER" layoutX="92.0" layoutY="188.0" prefHeight="25.0" prefWidth="416.0" promptText="LOGIN" style="-fx-background-radius: 50; -fx-background-color: #669A9D;" />
-            <TextField accessibleRole="DATE_PICKER" alignment="TOP_CENTER" layoutX="95.0" layoutY="297.0" prefHeight="25.0" prefWidth="416.0" promptText=" SIGN UP" style="-fx-background-radius: 50; -fx-background-color: #82BFC2;" />
+            <TextField fx:id="username" accessibleRole="CONTEXT_MENU" alignment="TOP_CENTER" layoutX="87.0" layoutY="205.0" prefHeight="25.0" prefWidth="600.0" promptText="Username/Email" style="-fx-background-radius: 50; -fx-background-color: #669A9D;">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <padding>
+                  <Insets bottom="10.0" top="10.0" />
+               </padding></TextField>
+            <Button fx:id="submitBtn" layoutX="254.0" layoutY="352.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="267.0" style="-fx-background-color: #000000; -fx-background-radius: 5;" text="LOGIN" textFill="WHITE">
+               <font>
+                  <Font name="Roboto Black" size="12.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="signUpBtn" layoutX="343.0" layoutY="407.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="90.0" style="-fx-background-color: E5E3D4;" text="Sign Up">
+               <font>
+                  <Font name="Roboto Black" size="14.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Label fx:id="usernameLabel" layoutX="94.0" layoutY="183.0" text="Username/Email" visible="false">
+               <font>
+                  <Font name="Roboto Black" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="passwordLabel" layoutX="94.0" layoutY="253.0" text="Password" visible="false">
+               <font>
+                  <Font name="Roboto Black" size="12.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
-      <Pane layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" stylesheets="@../../../../../../../fopAsg/fopasg/src/main/resources/com/mycompany/frontend/css/style.css" />
    </children>
 </AnchorPane>
