--- a/fopasg/src/main/resources/com/mycompany/frontend/main-menu.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/main-menu.fxml
@@ -83,7 +83,7 @@
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="34.0" layoutY="421.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" style="-fx-background-color: #ffffff; -fx-background-radius: 0px;" text="✖ Log Out" textFill="#1c325b">
+                  <Button fx:id="logoutBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="34.0" layoutY="421.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" style="-fx-background-color: #ffffff; -fx-background-radius: 0px;" text="✖ Log Out" textFill="#1c325b">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
